<resources>
    <string name="app_name">FrogChat</string>
    <string name="imagesplash">imagesplash</string>
    <string name="frogchat">FrogChat</string>
    <string name="write_your_phone_number_here">Write your phone number here</string>
    <string name="send_me_a_verification_code">Send me a verification code</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome">Welcome</string>
    <string name="prefs_file">com.frankdevacap.frogchat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escribe_el_codigo_recibido">Escribe el codigo recibido</string>
    <string name="comprobar_el_codigo_recibido">Comprobar el codigo recibido</string>
</resources>