<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewSplash"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/imagesplash"
            android:src="@drawable/ic_splash" />

        <TextView
            android:id="@+id/textViewSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/welcome"
            android:textColor="@color/colorTextBlack"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_button"
            android:gravity="center_horizontal"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/colorTextBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_button"
            android:digits="+0123456789"
            android:gravity="center_horizontal"
            android:hint="@string/write_your_phone_number_here"
            android:inputType="phone"
            android:textColor="@color/colorTextBlack"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnEnviarCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_button"
            android:gravity="center_horizontal"
            android:text="@string/send_me_a_verification_code"
            android:textColor="@color/colorTextBlack"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/authLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextNumberVerification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="Escribe el codigo recibido"
                android:inputType="number"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnCodex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_button"
                android:text="Comprobar el codigo recibido"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlack"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>